--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -21,12 +21,11 @@
         <% if current_user %>
           <%= link_to 'Admin', admin_dashboard_index_path, class: nav_link_classes('admin/dashboard') if current_user.admin? %>
           <%= link_to 'Dashboard', dashboard_index_path, class: nav_link_classes('dashboard') %>
-          <%= link_to 'Account', account_index_path, class: nav_link_classes('account') %>
-          <%= link_to 'Logout', logout_path, class: nav_link_classes %>
+          <%= link_to 'Minha conta', account_index_path, class: nav_link_classes('account') %>
+          <%= link_to 'Sair', logout_path, class: nav_link_classes %>
         <% else %>
-          <%= link_to 'Contact', "mailto:#{ENV['ADMIN_EMAIL']}", target: '_blank', class: nav_link_classes('contact')  %>
-          <%= link_to 'Login', new_user_session_path, class: nav_link_classes('login') %>
-          <%= link_to 'Signup', new_user_registration_path, class: 'ml-8 whitespace-nowrap text-base font-medium inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-white bg-primary-600 hover:bg-primary-700' %>
+          <%= link_to 'Entre', new_user_session_path, class: nav_link_classes('login') %>
+          <%= link_to 'Cadastre-se', new_user_registration_path, class: 'ml-8 whitespace-nowrap text-base font-medium inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-white bg-primary-600 hover:bg-primary-700' %>
         <% end %>
       </div>
     </div>
