--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,10 +17,12 @@
 
     <div id="main-nav" class="w-full flex-grow sm:flex text-right sm:w-auto hidden" data-header-target="mainNav">
       <div class="text-sm sm:flex-grow">
-        <%= link_to 'Blog', blog_posts_path, class: nav_link_classes('blog') %>
+        <%= link_to 'Escrever', blog_posts_path, class: nav_link_classes('blog') if current_user.can_create? %>
         <% if current_user %>
-          <%= link_to 'Admin', admin_dashboard_index_path, class: nav_link_classes('admin/dashboard') if current_user.admin? %>
-          <%= link_to 'Dashboard', dashboard_index_path, class: nav_link_classes('dashboard') %>
+          <%= link_to 'Gerenciar', admin_dashboard_index_path, class: nav_link_classes('admin/dashboard') if current_user.admin? %>
+          <% if current_user.can_approve? %>
+            <%= link_to 'Avaliar', dashboard_index_path, class: nav_link_classes('dashboard') %>
+          <% end %>
           <%= link_to 'Minha conta', account_index_path, class: nav_link_classes('account') %>
           <%= link_to 'Sair', logout_path, class: nav_link_classes %>
         <% else %>
