--- a/app/views/admin/users/_profile.html.erb
+++ b/app/views/admin/users/_profile.html.erb
@@ -4,16 +4,14 @@
     <%= f.text_field :email, required: true, class: "appearance-none rounded-b-md rounded-t-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:border-primary-300 focus:z-10 sm:text-sm sm:leading-5", placeholder: "Acme Co" %>
   </div>
 
-  <div class="form-check">
-    <%= f.check_box :admin, class: 'form-check-input appearance-none h-4 w-4 border border-gray-300 rounded-sm bg-white checked:bg-primary-600 checked:border-primary-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer' %>
-    <label class="cursor-pointer form-check-label inline-block text-gray-800" for="user_admin">
-      Admin?
-    </label>
+  <div class="mb-2">
+    <label for="company_name">Senha</label>
+    <%= f.text_field :password, required: true, class: "appearance-none rounded-b-md rounded-t-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:border-primary-300 focus:z-10 sm:text-sm sm:leading-5", placeholder: "Acme Co" %>
   </div>
 
   <div class="mt-6">
     <button type="submit" data-turbo="false" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:border-primary-700 transition duration-150 ease-in-out">
-      Update
+      Atualizar
     </button>
   </div>
 <% end %>
