--- a/app/views/blog_posts/_form.html.erb
+++ b/app/views/blog_posts/_form.html.erb
@@ -18,64 +18,50 @@
         <div class="mt-5 md:mt-0 md:col-span-2">
           <div class="space-y-6">
             <div class="sm:col-span-3">
-              <%= form.label :slug, class: "block text-sm font-medium text-gray-700" %>
+              <%= form.label :url, class: "block text-sm font-medium text-gray-700" %>
               <div class="mt-1 flex rounded-md shadow-sm">
                 <span class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-gray-500 sm:text-sm">
-                  https://yoursite.com/blog/
+                  https://luminary/blog/
                 </span>
-                <%= form.text_field :slug, required: true, class: "flex-1 block w-full min-w-0 rounded-none rounded-r-md sm:text-sm border-gray-300 focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50", placeholder: "how-to-grow-a-saas" %>
-              </div>
-            </div>
-
-            <%# checkbox to consider this post a draft %>
-            <div class="sm:col-span-3">
-              <div class="flex items-start">
-                <div class="flex items-center h-5">
-                  <%= form.check_box :draft, class: "focus:ring-primary-500 h-4 w-4 text-primary-600 border-gray-300 rounded" %>
-                </div>
-                <div class="ml-3 text-sm">
-                  <%= form.label :draft, class: "font-medium text-gray-700" %>
-                  <p class="text-gray-500">Drafts are not visible to the public</p>
-                </div>
+                <%= form.text_field :slug, required: true, class: "flex-1 block w-full min-w-0 rounded-none rounded-r-md sm:text-sm border-gray-300 focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50", placeholder: "tutorial-aula-web-2" %>
               </div>
             </div>
 
             <div class="sm:col-span-3">
-              <%= form.label :title, class: "block text-sm font-medium text-gray-700" %>
-              <%= form.text_field :title, required: true, class: "mt-1 focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md", placeholder: "Title of your blog post. (65 characters max)", maxlength: 65 %>
+              <%= form.label :titulo, class: "block text-sm font-medium text-gray-700" %>
+              <%= form.text_field :title, required: true, class: "mt-1 focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md", placeholder: "Titulo do seu artigo", maxlength: 65 %>
             </div>
 
             <div class="sm:col-span-3">
-              <%= form.label :description, class: "block text-sm font-medium text-gray-700" %>
-              <%= form.text_area :description, required: true, rows: 2 , class: "mt-1 focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md", placeholder: "A snippet of text designed to summarise a page. Though not critically important, an ideal length would be 70-155 characters.", maxlength: 155 %>
+              <%= form.label :descricao, class: "block text-sm font-medium text-gray-700" %>
+              <%= form.text_area :description, required: true, rows: 2 , class: "mt-1 focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md", placeholder: "Descreva seu artigo aqui.", maxlength: 155 %>
             </div>
 
             <div class="col-span-full">
-              <label for="cover_image" class="block text-sm font-medium leading-6 text-gray-900">Cover photo</label>
+              <label for="cover_image" class="block text-sm font-medium leading-6 text-gray-900">Capa do artigo</label>
               <div id="drop_zone" class="mt-2 flex justify-center rounded-lg border border-dashed border-gray-900/25 px-6 py-10">
                 <div class="text-center">
                   <%= image_tag @blog_post.cover_image, id: 'cover_image_preview', data: { url: url_for(@blog_post.cover_image) } if @blog_post.cover_image.attached? %>
                   <img id="cover_image_preview" src="#" alt="Cover Image Preview" class="hidden"/>
                   <div class="mt-4 flex text-sm leading-6 text-gray-600 justify-center">
                     <label for="cover_image" class="relative cursor-pointer rounded-md bg-white font-semibold text-gray-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-gray-600 focus-within:ring-offset-2 hover:text-gray-500">
-                      <span>Upload a file</span>
                       <%= form.file_field :cover_image, id: 'cover_image', class: 'sr-only' %>
                     </label>
-                    <p class="pl-1">or drag and drop</p>
+                    <p class="pl-1">Arraste aqui :)</p>
                   </div>
-                  <p class="text-xs leading-5 text-gray-600">PNG, JPG, WEBP up to 1MB (1200 × 630 px recommended)</p>
+                  <p class="text-xs leading-5 text-gray-600">PNG ou JPEG</p>
                 </div>
               </div>
             </div>
 
             <div class="field relative border rounded-lg min-h-[175px] border-gray-300 group">
-              <%= form.rich_text_area :body, placeholder: "Write your blog post...", required: true, class:"group-focus:ring-gray-500 group-focus:border-gray-500 prose pb-5" %>
+              <%= form.rich_text_area :body, placeholder: "Escreva seu artigo aqui...", required: true, class:"group-focus:ring-gray-500 group-focus:border-gray-500 prose pb-5" %>
             </div>
           </div>
         </div>
       </div>
       <div class="flex justify-center items-center mt-4 sticky bottom-0 px-4 py-5 bg-gray-50 border-t rounded-b-lg">
-        <%= form.submit "Save", class:"group relative w-full flex justify-center py-2.5 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none cursor-pointer"%>
+        <%= form.submit "Enviar para revisão", class:"group relative w-full flex justify-center py-2.5 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none cursor-pointer"%>
       </div>
     </div>
   </div>
