--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,1 +1,15 @@
-<%= render partial: "shared/heading", locals: { title: 'Dashboard', description: '' } %>
+<%= render partial: "shared/heading", locals: { title: 'Avaliar', description: '' } %>
+<div class="font-inter antialiased text-gray-800 tracking-tight my-16">
+  <main class="grow">
+    <section>
+      <div class="mx-auto max-w-7xl px-6 lg:px-8">
+        <div class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+          <% @blog_posts.each do |blog_post| %>
+            <%= render blog_post %>
+          <% end %>
+        </div>
+      </div>
+    </section>
+  </main>
+
+</div>
