--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -40,7 +40,7 @@
 
                 </td>
                 <td class="px-6 py-4 whitespace-wrap text-sm text-gray-500">
-                  <%= link_to 'edit', edit_admin_user_path(id: user.id), class: 'text-primary-500' %>
+                  <%= link_to 'Editar', edit_admin_user_path(id: user.id), class: 'text-primary-500' %>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
                   <%= user.role %>
@@ -60,42 +60,33 @@
           <thead class="bg-gray-50">
           <tr>
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              Nome
+              Titulo
             </th>
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              Email
-            </th>
-            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              Apagar posts
+              Descricao
             </th>
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
               Ação
             </th>
             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              Função
+              Avaliado?
             </th>
           </tr>
           </thead>
           <tbody class="bg-white divide-y divide-gray-200 w-full">
-          <% @users.each do |user| %>
+          <% @blog_posts.each do |post| %>
             <tr>
               <td class="px-6 py-4 whitespace-wrap text-sm text-gray-500">
-                <%= user.name %>
+                <%= post.title %>
               </td>
               <td class="px-6 py-4 whitespace-wrap text-sm text-gray-500">
-                <%= user.email %>
+                <%= post.description %>
               </td>
               <td class="px-6 py-4 whitespace-wrap text-sm text-gray-500">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
-                </svg>
-
-              </td>
-              <td class="px-6 py-4 whitespace-wrap text-sm text-gray-500">
-                <%= link_to 'edit', edit_admin_user_path(id: user.id), class: 'text-primary-500' %>
+                <%= link_to 'Editar', "/blog/#{post.slug}", method: :delete, class: 'text-primary-500' %>
               </td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                <%= user.role %>
+                <%= post.draft %>
               </td>
             </tr>
           <% end %>
