--- a/app/views/blog_posts/_blog_post.html.erb
+++ b/app/views/blog_posts/_blog_post.html.erb
@@ -22,7 +22,7 @@
   </article>
       <% if current_user&.can_review? && blog_post.draft %>
         <div class="mt-8 mx-auto max-w-fit">
-          <%= link_to 'Approve', approve_blog_post_path(blog_post.id), method: :post, remote: true, class: "group relative w-full flex justify-center py-2.5 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none" %>
+          <%= link_to 'Aprovar', approve_blog_post_path(blog_post.id), method: :post, remote: true, class: "group relative w-full flex justify-center py-2.5 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none" %>
         </div>
       <% end %>
 </div>
