--- a/app/views/blog_posts/review.html.erb
+++ b/app/views/blog_posts/review.html.erb
@@ -4,7 +4,7 @@
 <div class="mt-16 mx-auto max-w-3xl px-4 sm:mt-24">
   <div class="text-center">
     <h1 class="text-2xl tracking-tight font-extrabold sm:text-3xl md:text-4xl font-display text-gray-800">
-      <span class="block">Aprovar</span>
+      <span class="block">Avaliar</span>
     </h1>
   </div>
 </div>
