--- a/app/views/mailers/user_mailer/offer_setup_assistance.html.erb
+++ b/app/views/mailers/user_mailer/offer_setup_assistance.html.erb
@@ -1,5 +1,5 @@
-<p>hey there,</p>
+<p>Eaí,</p>
 
-<p>do you need help setting up your <%= ENV['COMPANY_NAME'] %> account?</p>
+<p>Seja bem vindo a plataforma!</p>
 
-<p>talk soon,<br><%= link_to ENV['COMPANY_NAME'], ENV['BASE_URL'] %></p>
+<p>qualquer duvida,<br> chama no zap.</p>
