--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -14,7 +14,7 @@
                 Email
               </th>
               <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Apagar posts
+                Membro desde
               </th>
               <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                 Ação
@@ -34,10 +34,7 @@
                   <%= user.email %>
                 </td>
                 <td class="px-6 py-4 whitespace-wrap text-sm text-gray-500">
-                  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
-                  </svg>
-
+                  <%= user.created_at.to_date %>
                 </td>
                 <td class="px-6 py-4 whitespace-wrap text-sm text-gray-500">
                   <%= link_to 'Editar', edit_admin_user_path(id: user.id), class: 'text-primary-500' %>
@@ -83,10 +80,10 @@
           <% @blog_posts.each do |post| %>
             <tr>
               <td class="px-6 py-4 whitespace-wrap text-sm text-gray-500">
-                <%= post.title %>
+                <%= post.title.first(25) %>
               </td>
               <td class="px-6 py-4 whitespace-wrap text-sm text-gray-500">
-                <%= post.description %>
+                <%= post.description.first(25) %>
               </td>
               <td class="px-6 py-4 whitespace-wrap text-sm text-gray-500">
                 <%= link_to 'Editar', "/blog/#{post.slug}", method: :delete, class: 'text-primary-500' %>
@@ -105,6 +102,21 @@
           </tbody>
         </table>
       </div>
+      <%= render partial: "shared/heading", locals: { title: '', description: 'Convidar novo usuário' } %>
+      <%= form_with url: invite_url, method: :post, local: true do |form| %>
+        <div class="field">
+          <div class="sm:col-span-3">
+            <%= form.label :nome, class: "block text-sm font-medium text-gray-700" %>
+            <%= form.text_field :name, required: true, class: "mt-1 focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md", placeholder: "Digite o nome", maxlength: 65 %>
+          </div>
+          <div class="sm:col-span-3">
+            <%= form.label :email, class: "block text-sm font-medium text-gray-700" %>
+            <%= form.text_field :email, required: true, class: "mt-1 focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md", placeholder: "Digite o email", maxlength: 65 %>
+          </div>
+          <%= form.submit "Enviar convite", class:" mt-8 group relative w-full flex justify-center py-2.5 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none cursor-pointer"%>
+
+            </div>
+      <% end %>
     </div>
   </div>
 </div>
