--- a/app/views/mailers/user_mailer/welcome.html.erb
+++ b/app/views/mailers/user_mailer/welcome.html.erb
@@ -1,5 +1,5 @@
-<p>hey there,</p>
+<p>Eaí,</p>
 
-<p>welcome to <%= ENV['COMPANY_NAME'] %>! let us know if you need any help.</p>
+<p>Seja bem vindo a plataforma!</p>
 
-<p>cheers,<br><%= link_to ENV['COMPANY_NAME'], ENV['BASE_URL'] %></p>
+<p>qualquer duvida,<br> chama no zap.</p>
