--- a/app/views/blog_posts/_blog_post.html.erb
+++ b/app/views/blog_posts/_blog_post.html.erb
@@ -11,11 +11,14 @@
       <div class="text-xs -mt-8 ml-auto text-right w-full pr-2.5">
         <time class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 border" datetime="<%= blog_post.updated_at.strftime('%m-%d-%Y') %>" class="text-gray-500"><%= blog_post.created_at.strftime('%B %d, %Y') %></time>
       </div>
-      <div class="group relative">
+      <p class="group relative">
         <h2 class="mt-9 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
           <%= blog_post.title %>
         </h2>
         <p class="mt-3 line-clamp-3 text-sm leading-6 text-gray-600"><%= blog_post.description %></p>
+        <p class="mt-3 line-clamp-3 text-sm leading-6 text-gray-600">
+          Nota: <%= blog_post.grade %>
+        </p>
       </div>
 
     <% end %>
