--- a/app/views/blog_posts/show.html.erb
+++ b/app/views/blog_posts/show.html.erb
@@ -57,6 +57,20 @@
             </div>
           </article>
         </div>
+
+        <% if current_user&.can_review? %>
+          <%= form_with url: review_grade_path(@blog_post.id), method: :post, local: true do |form| %>
+            <div class="w-full justify-center">
+              <%= form.label :nota, class: "block text-sm font-medium text-gray-700" %>
+              <%= form.number_field :grade, required: true, class: "mt-1 focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50 block w-48 shadow-sm sm:text-sm border-gray-300 rounded-md", placeholder: "Nota", maxlength: 65 %>
+
+              <%= form.label :peso, class: "block text-sm font-medium text-gray-700" %>
+              <%= form.number_field :weight_grade, required: true, class: "mt-1 focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50 block w-48 shadow-sm sm:text-sm border-gray-300 rounded-md", placeholder: "Nota", maxlength: 65 %>
+
+              <%= form.submit "Enviar revisão", class:"group relative w-48 mt-2 flex justify-center py-2.5 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none cursor-pointer"%>
+                </div>
+          <% end %>
+        <% end %>
       </section>
     </main>
   </div>
